--- a/skin/res/css/index.css
+++ b/skin/res/css/index.css
@@ -13,6 +13,7 @@ body {
 }
 
 .site-footer {
+    padding: 10px;
     border-top: 2px solid black;
     background: white;
 }
@@ -87,4 +88,43 @@ a:active {
 img {
     max-width: 100%;
     height: auto;
+}
+
+div.tright, div.floatright, table.floatright {
+    clear: right;
+    float: right;
+}
+
+div.tleft, div.floatleft, table.floatleft {
+    clear: left;
+    float: left;
+}
+
+.thumbinner {
+    margin: auto;
+}
+
+table.wikitable {
+    border-spacing: 0px;
+    border-collapse: collapse;
+}
+
+table.wikitable th, table.wikitable td {
+    border: 1px solid #c8c8c8;
+    background: white;
+    padding: 5px;
+}
+
+table.wikitable th {
+    background: #f8f8f8;
+}
+
+table.wikitable {
+    margin: 10px 0;
+}
+
+table.infobox {
+    float: right;
+    margin-left: 10px;
+    margin-bottom: 20px;
 }
